# generative-art

./: .gitattributes  .gitignore  LICENSE  README.md  WORKFLOW.md  pyproject.toml
projects/pendulum/: README.md  sketch.py
projects/tiling_holes/: README.md  sketch.py
projects/tiling_squares/: README.md  sketch.py
src/genart/: __init__.py  io.py  palettes.py  seeds.py  tiling.py
