[project]
name = "genart"
version = "0.1.0"
description = "Generative art toolkit and project monorepo: shared palettes, IO, and reproducibility utilities, plus a collection of py5-based sketches."
readme = "README.md"
authors = [
    { name = "Nico Fraternali", email = "nfraternali@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "py5>=0.10",
    "numpy>=1.26",
    "scipy>=1.12",
    "pillow>=10.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "nbstripout>=0.7",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"